--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,18 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
+html, body { 
+  margin:0; 
+  padding:0; 
+  height:100%; 
+}
+
+.container-fluid{
+  height: 100%;
+}
+
+.content{
+  margin-left: 92px;  
+}
